# DONES

./: .gitignore  CMakeLists.txt  Makefile  PythonMain.py  README.md  test.cpp
src/: Makefile  main.cpp  main.hpp  matrix.cpp  matrix.hpp  solve.cpp  solve.hpp  system-utils.cpp  system-utils.hpp  system.cpp  system.hpp  translate.cpp
